put application classes on the classpath