@@ -8,7 +8,6 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-mainClassName = 'com.example.demo.DemoApplication'
 sourceCompatibility = 11
 targetCompatibility = 11
 
@@ -18,6 +17,10 @@ repositories {
 
 java {
     modularity.inferModulePath = true;
+}
+application {
+    mainModule = 'demo.main'
+    mainClass = 'com.example.demo.DemoApplication'
 }
 
 ext {
@@ -120,10 +123,31 @@ jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         jvmArgs = [
+            // '-Dlogging.level.org.springframework=TRACE ', // useful for troubleshooting
+            '-cp', '../app',
+            '-Dspring.profiles.active=development',
             '--add-reads', 'com.example.merged.module=demo.main',
             '--add-opens', 'demo.main/com.example.demo=com.example.merged.module',
+            '--add-opens', 'demo.main/com.example.demo.repo.impl=com.example.merged.module',
             '--add-opens', 'java.base/java.lang=com.example.merged.module',
             '--add-opens', 'java.base/java.io=com.example.merged.module',
+            '--add-exports', 'demo.main/com.example.demo.init=com.example.merged.module',
+            '--add-exports', 'demo.main/com.example.demo.repo.impl=com.example.merged.module',
+            '--add-exports', 'demo.main/com.example.demo.service.impl=com.example.merged.module',
         ]
+    }
+}
+
+tasks.jlink.doLast {
+    // Uncomment the below block to make application properties available outside the JAR
+    // copy {
+    //     from "src/main/resources"
+    //     into "$imageDir.asFile/bin/config"
+    // }
+
+    // Make application classes available to Spring's ClassPathScanner
+    copy {
+        from "$buildDir/classes/java/main"
+        into "$imageDir.asFile/app"
     }
 }
